# modern_transformer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/components/: attentions.py  norm_layers.py  rope.py
src/modern_transformer/components/: activations.py  attentions.py  moe.py  norm_layers.py  rope.py
src/modern_transformer/transformer/: blocks.py  model.py
src/transformer/: blocks.py  model.py
tests/integration_tests/: test_code.py
tests/unittests/: test_activations.py  test_attentions.py  test_moe.py  test_norm_layers.py  test_rope.py
