[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modern_transformer"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "modern_transformer"
version = "0.0.1"
authors = [
  { name="Thomas Bourgeois", email="thomasbourgeois1@gmail.com" },
]
description = "Decoder with MoE, sliding window attention, and RoPE embeddings."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "torch>=2.2.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/ThomasBourgeois/modern_transformer"
Issues = "https://github.com/ThomasBourgeois/modern_transformer/issues"